--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@aws-amplify/core": "^5.1.1",
     "@styled-system/theme-get": "^5.1.2",
+    "aws-amplify": "^5.0.18",
+    "aws-amplify-react": "^5.1.43",
     "axios": "^1.3.4",
     "axios-mock-adapter": "^1.21.2",
     "chart.js": "^4.1.1",
@@ -29,6 +32,7 @@
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.0",
     "react-svg": "^15.1.17",
+    "react-toastify": "^9.1.1",
     "simplebar-react": "^2.4.3",
     "styled-components": "^5.3.6",
     "styled-system": "^5.1.5",
