--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "@styled-system/theme-get": "^5.1.2",
     "aws-amplify": "^5.0.18",
     "aws-amplify-react": "^5.1.43",
+    "aws-jwt-verify": "^3.4.0",
+    "aws-sdk": "^2.1333.0",
     "axios": "^1.3.4",
     "axios-mock-adapter": "^1.21.2",
     "chart.js": "^4.1.1",
     "clsx": "^1.2.1",
+    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "joi": "^17.8.3",
     "lodash": "^4.17.21",
+    "lodash.isempty": "^4.4.0",
+    "moment": "^2.29.4",
     "next": "^12.2.4",
+    "next-connect": "^0.13.0",
     "nprogress": "^0.2.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
@@ -36,6 +43,7 @@
     "simplebar-react": "^2.4.3",
     "styled-components": "^5.3.6",
     "styled-system": "^5.1.5",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
