--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lodash": "^4.17.21",
     "lodash.isempty": "^4.4.0",
     "moment": "^2.29.4",
+    "multer": "^1.4.4",
+    "multer-s3": "2.10.0",
     "next": "^12.2.4",
     "next-connect": "^0.13.0",
     "nprogress": "^0.2.0",
