--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "axios-mock-adapter": "^1.21.2",
     "chart.js": "^4.1.1",
+    "nodejs-moncash-sdk": "github:Trellisweb/moncash-sdk-nodejs",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
