--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/core": "^5.1.1",
     "@styled-system/theme-get": "^5.1.2",
+    "algoliasearch": "^4.17.0",
     "aws-amplify": "^5.0.18",
     "aws-amplify-react": "^5.1.43",
     "aws-jwt-verify": "^3.4.0",
@@ -19,7 +20,6 @@
     "axios": "^1.3.4",
     "axios-mock-adapter": "^1.21.2",
     "chart.js": "^4.1.1",
-    "nodejs-moncash-sdk": "github:Trellisweb/moncash-sdk-nodejs",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
@@ -32,6 +32,7 @@
     "multer-s3": "2.10.0",
     "next": "^12.2.4",
     "next-connect": "^0.13.0",
+    "nodejs-moncash-sdk": "github:Trellisweb/moncash-sdk-nodejs",
     "nprogress": "^0.2.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
