--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.41.2",
+    "netlify-cli": "^17.2.2",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
     "@types/nprogress": "^0.2.0",
