--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-connect": "^0.13.0",
     "nodejs-moncash-sdk": "github:Trellisweb/moncash-sdk-nodejs",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
