--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.1.1",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
+    "country-state-city": "^3.2.1",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "joi": "^17.8.3",
