--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 18
     commands:
       - yarn install
-      - yarn global add netlify-cli
+      - yarn global add netlify-cli@17.2.2
 
   build:
     commands:
