Update the build spec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,9 +12,9 @@ phases:
     commands:
       - netlify deploy --prod --build
 
-# post_build:
-#   commands:
-#     - netlify deploy --prod --build
+post_build:
+  commands:
+    - netlify deploy --prod --build
 
 artifacts:
   base-directory: out
