--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie": "^0.5.0",
     "country-state-city": "^3.2.1",
     "date-fns": "^2.29.3",
+    "eslint-config-next": "^13.5.6",
     "formik": "^2.2.9",
     "joi": "^17.8.3",
     "lodash": "^4.17.21",
@@ -31,7 +32,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.4",
     "multer-s3": "2.10.0",
-    "next": "^12.2.4",
+    "next": "^13.5.6",
     "next-connect": "^0.13.0",
     "nodejs-moncash-sdk": "github:Trellisweb/moncash-sdk-nodejs",
     "nprogress": "^0.2.0",
