--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
+[functions]
+  included_files = [
+  "node_modules/next/dist/server/future/route-modules/pages/vendored/contexts/amp-context*",
+  "node_modules/next/dist/server/future/route-modules/pages/vendored/contexts/head-manager-context*",
+]
+
 [[plugins]]
 package = "@netlify/plugin-nextjs"
 
